# fav

./: Cargo.toml  README.md  dprint.json
cli/: Cargo.toml
cli/src/: app.rs  edit.rs  highlighter.rs  main.rs  templates.rs
