[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.15", features = ["derive"]}
crossterm = "0.24.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.83"
syntect = "5.0.0"
tempfile = "3.3.0"
toml = "0.5.9"
tui = "0.18.0"
unicode-width = "0.1.9"
